线性表错题补充

--- a/408数据结构/Note/线性表.md
+++ b/408数据结构/Note/线性表.md
@@ -625,7 +625,7 @@ s->prev = p;
 ### 静态链表
 
 ![20231218140207](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231218140207.png)
-静态链表借助数组来描述线性表的链式存储结构,结点也有数据域 `data` 和指针域 `next`,这里的指针是结点的相对地址(数组下标),又称游标.和顺序表一样,静态链表也要预先分配一块连续的内存空间.
+静态链表借助数组来描述线性表的链式存储结构,结点也有数据域 `data` 和指针域 `next`,这里的指针**是结点的相对地址(数组下标),又称游标**.和顺序表一样,静态链表也要预先分配一块连续的内存空间.
 静态链表结构类型的描述如下
 
 ```c++
@@ -665,5 +665,6 @@ typedef struct		// 静态链表结构类型的定义
    - 非随机存取就是顺序存取,不能通过下标访问了,只能按照存储顺序存取,与存储位置有关,例如链表.顺序存取就是存取第 N 个数据时,必须先访问前(N-1)个数据 (list),随机存取就是存取第 N 个数据时.
      ![20240329100650](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240329100650.png)
 2. 有序与顺序?
-   - 有序指的是逻辑关系,顺序指的是物理关系 
+   - 有序指的是逻辑关系,顺序指的是物理关系
    - 有序表是指表中所有数据元素的数值以递增或递减方式有序排列,是数据元素的数值的有序性.有序表只描述元素之间的逻辑关系,故为逻辑结构,因此有序表既可以顺序存储也可以链式存储.
+3. 此外，本章有一个类型的题容易错，如下所示：若某线性表中最常用的操作是在最后一个结点之后插入一个结点和删除最后一个结点，则下面最合适的存储方式是（）。A. 单链表 B.循环双链表 C.单循环链表 D. 带有尾指针的单循环链表。本题易选错 D 选项，正确答案是 B 选项，错选的原因是忽略了将循环链表尾节点删除时，尾节点的前一个节点无法与头节点连接。
