线性表，树，栈，队列重点标记

--- a/408数据结构/Note/栈,队列.md
+++ b/408数据结构/Note/栈,队列.md
@@ -2,9 +2,9 @@
 
 ## 栈的定义
 
-![20231218150454](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231218150454.png)
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231218150454.png" width = 20%/></div>
 
-- **栈是只允许在一端进行插入或删除操作的线性表.**
+- <font color="red">栈是只允许在一端进行插入或删除操作的线性表。</font>
 - 栈的特点：
   - 栈顶：线性表允许进行插入删除的那一端
   - 栈底：固定的,不允许进行插入和删除的另一端
@@ -34,18 +34,25 @@ typedef struct
 - 栈顶指针:`S.top`,初始时设置 `S.top = -1`;栈顶元素:`S.data [S.top]`.
 - 进栈操作:栈不满时,栈顶指针先加 1,再送值到栈顶元素.
 - 出栈操作:栈非空时,先取栈顶元素值,再将栈顶指针减 1.
-- 栈空条件:`S.top == -1`;栈满条件:`S.top == MaxSize - 1`;栈长:`S.top+1`.
+- <font color="red">栈空条件</font>:可以观察到，顺序的栈的元素存放空间为$[0,MaxSize-1]$,因此栈顶指针处于存放空间外时，是空栈或者栈满，因此可以得到： `S.top == -1`;栈满条件：`S.top == MaxSize - 1`;栈长:`S.top+1`.
 
 <font color="red">元素的出栈和入栈部分需要注意点是:这里的`top`指的是栈顶元素.于是,进栈操作为`S.data[++S.top]=x`,出栈操作 `S.data[S.top--]`.若栈顶指针初始化为 `S.top=0`,即 `top` 指向栈项元素的下一位置入栈操作变为 `S.data[s.top++]=x`:出栈操作变为 `x=S.data[--S.top]`.相应的栈空栈满条件也会发生变化.</font>具体栈的空操作如下图所示:
-![20240413154246](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240413154246.png)
 
-### 链栈
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240413154246.png" width = 40%/></div>
+
+### <font color="#00008B">链栈</font>
 
 采用链式存储的栈称为链栈,**链栈的优点是便于多个栈共享存储空间和提高其效率,且不存在栈满上溢的情况**.通常采用**单链表实现**,并规定所有操作都是在**单链表的表头**进行的.这里规定链栈没有头结点,Lhead 指向栈顶元素.
-![20231218212908](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231218212908.png)
+
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231218212908.png" width = 80%/></div>
 
 ```c++
-// 链栈的存储类型
+// 链栈的存储类型定义
+typedef struct LinkStack
+{
+    LinkNode *top;
+}LinkStack;
+// 链栈中节点的存储类型
 typedef struct LinkNode{
     ElemType data;// 数据域
     struct LinkNode *next;// 指针域
@@ -56,7 +63,7 @@ typedef struct LinkNode{
 
 ### 顺序栈的操作
 
-#### 栈的初始化
+#### 栈的定义
 
 ```c++
 // 该栈为顺序栈
@@ -141,9 +148,13 @@ int GetTop(SqStack &S, int x)
 }
 ```
 
-### 链栈的操作
+### <font color="red">链栈的操作</font>
 
 #### 元素进栈
+
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240811151854.png" width = 80%/></div>
+
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240811151922.png" width = 80%/></div>
 
 ```c++
 bool push(LinkStack &S, int e)
@@ -160,6 +171,10 @@ bool push(LinkStack &S, int e)
 ```
 
 #### 元素出栈
+
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240811152043.png" width = 60%/></div>
+
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240811152120.png" width = 70%/></div>
 
 ```c++
 bool pop(LinkStack &S)
@@ -180,13 +195,29 @@ bool pop(LinkStack &S)
 
 ![20231218213245](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231218213245.png)
 将两个栈放在同一段存储空间中,分别让两个栈从两端开始往中间增长,这种栈被称为共享栈.
+共享栈的初始化代码为：
+
+```c++{.line-numbers}
+// 0号栈的初始化
+S0.top = -1;//initial
+S0.data[++S0.top] = x;//push
+x = S0.data[S0.top--];//pop
+// 1号栈的初始化
+S1.top = MaxSize;//initial
+S1.data[--S1.top] = x;// push
+x = S1.data[S1.top++];//pop
+// 栈满的条件
+S0.top + 1 == S1.top
+S1.top - 1 == S0.top
+```
 
 # 队列
 
 ## 队列的定义
 
-![20231218230132](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231218230132.png)
-队列(Queue)是只允许在一端进行插入,在另一端删除的线性表
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231218230132.png" width = 80%/></div>
+
+<font color="red">队列(Queue)是只允许在一端进行插入,在另一端删除的线性表</font>
 
 - 队列的特点
   - 队列操作的特性是先进先出$(First \ In \ First \ Out, FIFO)$
@@ -214,12 +245,14 @@ typedef struct
 - **出队操作:队不满时,先取队头元素值,再将队头指针加 1**
 
 ![20231219093702](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231219093702.png)
-从上面的进队和出队操作可以看到不能使用`Q.rear==MaxSize`.但是在上面的 d 图中,队列中仅有一个元素,但是依然满足上述条件.因此这时叫做"假溢出".因此为了解决这个问题需要使用循环队列来解决.
+从上面的进队和出队操作可以看到不能使用`Q.rear==MaxSize`.但是在上面的 d 图中,队列中仅有一个元素,但是依然满足上述条件.因此这时叫做 **"假溢出"** .因此为了解决这个问题需要使用循环队列来解决.
 
-### 链式队列
+### <font color="#00008B">链式队列</font>
 
-![20240413164408](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240413164408.png)
-![20240413164745](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240413164745.png)
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240413164408.png" width = 60%/></div>
+
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240413164745.png" width = 80%/></div>
+
 队列可由队头指针和队尾指针代表整个链表,因此将队头指针和队尾指针放入一个结构体用来表示队列.
 
 ```c++
@@ -260,7 +293,11 @@ bool IsEmpty(LinkQueue &Q)
 }
 ```
 
-#### 元素入队
+#### <font color="red">元素入队</font>
+
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240811155725.png" width = 80%/></div>
+
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240811155749.png" width = 80%/></div>
 
 ```c++
 void EnQueue(LinkQueue &Q, int x)
@@ -272,7 +309,11 @@ void EnQueue(LinkQueue &Q, int x)
 }
 ```
 
-#### 元素出队
+#### <font color="red">元素出队</font>
+
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240811155930.png" width = 80%/></div>
+
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240811160010.png" width =80%/></div>
 
 ```c++
 bool DeQueue(LinkQueue &Q)
@@ -290,7 +331,7 @@ bool DeQueue(LinkQueue &Q)
 
 ## 特殊队列
 
-### 循环队列
+### <font color="red">循环队列</font>
 
 #### 循环队列的定义
 
@@ -308,11 +349,15 @@ typedef struct
 
 **特定条件下循环队列对头和队尾指针的初值:**
 
-- 初始时:`Q.front=Q.rear=0`
-- 队首指针进 1:`Q.front=(Q.front+1)%MaxSize`
-- 队尾指针进 1:`Q.rear=(Q.rear+1)%MaxSize`
-- 队列长度:`(Q.rear+Maxsize-Q.front)%Maxsize`
-- 出队入队时:指针都按顺时针方向进 1
+1. 初始时:`Q.front=Q.rear=0`
+2. 队首指针进 1:`Q.front=(Q.front+1)%MaxSize`
+3. 队尾指针进 1:`Q.rear=(Q.rear+1)%MaxSize`
+4. 队列长度:`(Q.rear+Maxsize-Q.front)%Maxsize`
+5. 出队入队时:指针都按顺时针方向进 1
+
+对上述部分代码进行解释：
+
+- 为什么 2，3，4 需要`%MaxSize`？如果没有`%MaxSize`，那么`Q.front=(Q.front+1)`操作，就会使`Q.front`的值越变越大。使用一轮就无法指示正常位置`Q.rear`同理。
 
 #### 循环队列的基本操作
 
@@ -332,10 +377,11 @@ void InitQueue(SqQueue &Q)
 为了判断队空和队满,有三种处理方法
 
 - 牺牲一个单元来区分队空和队满,入队时少用一个队列单元,这是一种较为普遍的做法,约定以"队头指针在队尾指针的下一位置作为队满的标志"
-  ![20231221163619](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231221163619.png)
-  - 那么这种方法的队满条件为:`(Q.rear + 1 ) % MaxSize == Q.front`
-  - 队空条件:`Q.front == Q.rear`
-  - 队列中元素的个数:`(q.rear - Q.front + MaxSize ) % MaxSize`
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231221163619.png" width = 30%/></div>
+
+- 那么这种方法的队满条件为:`(Q.rear + 1 ) % MaxSize == Q.front`
+- 队空条件:`Q.front == Q.rear`
+- 队列中元素的个数:`(q.rear - Q.front + MaxSize ) % MaxSize`
 
 ```c++
 bool IsEmpty(SqQueue &Q)
@@ -397,7 +443,7 @@ int CountQueue(SqQueue &Q)
 - 不匹配入栈
 - 匹配出栈
 
-## 后缀求值
+## <font color="red">后缀求值</font>
 
 表达式求值要解决的问题一般是输入一个字符串表示的表达式,要求输出它的值。当然也有变种比如表达式中是否包含括号,指数运算,含多少变量,判断多个表达式是否等价,等等。
 
@@ -409,7 +455,7 @@ int CountQueue(SqQueue &Q)
 
 一种递归分析表达式的方法是,将表达式当成普通的语法规则进行分析,分析后拆分成如图所示的表达式树,然后在树结构上自底向上进行运算.
 
-表达式树上进行 树的遍历 可以得到不同类型的表达式。算术表达式分为三种,分别是前缀表达式、中缀表达式、后缀表达式。中缀表达式是日常生活中最常用的表达式；后缀表达式是计算机容易理解的表达式。
+表达式树上进行树的遍历可以得到不同类型的表达式。算术表达式分为三种,分别是前缀表达式、中缀表达式、后缀表达式。中缀表达式是日常生活中最常用的表达式；后缀表达式是计算机容易理解的表达式。
 
 - 前序遍历对应前缀表达式(波兰式)
 - 中序遍历对应中缀表达式
@@ -429,19 +475,11 @@ $$
 
 因此,逆波兰表达式与表达式树一一对应。逆波兰表达式不需要括号表示,它的运算顺序是唯一确定的。
 
-逆波兰表达式的方便之处在于很容易在线性时间内计算。举个例子：在逆波兰表达式 $3 2 \div \times 1 -$ 中,首先计算 $3 \times 2 = 6$(使用最后一个运算符,即栈顶运算符),然后计算 $6 - 1 = 5$。可以看到：对于一个逆波兰表达式,只需要 **维护一个数字栈,每次遇到一个运算符,就取出两个栈顶元素,将运算结果重新压入栈中**。最后,栈中唯一一个元素就是该逆波兰表达式的运算结果。该算法拥有 $O(n)$ 的时间复杂度。
+逆波兰表达式的方便之处在于很容易在线性时间内计算。举个例子：在逆波兰表达式 $3 2 \div \times 1 -$ 中,首先计算 $3 \times 2 = 6$(使用最后一个运算符,即栈顶运算符),然后计算 $6 - 1 = 5$。可以看到：对于一个逆波兰表达式的求解,只需要 **维护一个数字栈,每次遇到一个运算符,就取出两个栈顶元素,将运算结果重新压入栈中**。最后,栈中唯一一个元素就是该逆波兰表达式的运算结果。该算法拥有 $O(n)$ 的时间复杂度。
 
-采用递归的办法分析表达式是否成功,依赖于语法规则的设计是否合理,即,是否能够成功地得到指定的表达式树。例如：
+<font color="#00008B">此外，如果题目给出后缀表达式和中缀表达式，应将二者换原为树，然后对该树进行前序遍历，然后得到波兰式。</font>
 
-$$
-a+b*c
-$$
-
-根据加号与乘号的运算优先级不同,该中缀表达式可能转化为两种不同的表达式树。可见,语法规则的设计高度依赖于运算符的优先级。借助运算符的优先级设计相应递归的语法规则,事实上是一件不容易的事情。
-
-下文介绍的办法将运算符与它的优先级视为一个整体,采用非递归的办法,直接根据运算符的优先级来分析与计算表达式。
-
-### 只含左结合的二元运算符的含括号表达式
+### <font color="red">中缀表达式转换为后缀表达式</font>
 
 考虑简化的问题。假设所有运算符都是二元的：所有运算符都有两个参数。并且所有运算符都是左结合的：如果运算符的优先级相等,则从左到右执行。允许使用括号。
 
@@ -454,7 +492,7 @@ $$
 3. 遇到操作符时
    1. 若是'(',则直接入 temp 栈
    2. 若是')'说明 temp 中一定有'('与之对应,则将 temp 栈中的所有运算符依次出栈并入栈 resut,直到遇见'('括号不会入 result 栈
-   3. 若是"+-\*/"运算符,则看当前的操作符与 temp 栈顶的运算符优先级(左$>$右),如果栈顶的运算符优先级更高,则将栈顶的运算符出栈并入栈 result 香则当前操作符入栈 temp
+   3. 若是"+-\*/"运算符,则看当前的操作符与 temp 栈顶的运算符优先级(**同级运算符，栈外的大于栈内的。不同级的话，就是先乘除后加减**),如果栈顶的运算符优先级更高,则将栈顶的运算符出栈并入栈 result 否则当前操作符入栈 temp
 4. 当中缀表达式遍历完成后,将 temp 中的操作符依次出栈并入栈 result, result 栈中从栈底到栈顶的内容就是后缀表达式
 
 具体流程(以$(2+3-1)*2-3*(8/4)$为例):
@@ -477,8 +515,9 @@ temp:
 
 这种隐式使用逆波兰表达式计算表达式的值的算法的时间复杂度为 $O(n)$。通过稍微修改上述实现,还可以以显式形式获得逆波兰表达式。
 
-后缀表达式求值思路:
-将前面两个方法结合起来,中缀转后缀的过程中,每有一个 op 从 temp 栈中弹出时,都从 result 栈中弹出两个操作数 a 和 b,计算 b op a 的结果再入栈 result,最终遍历结束时 result 栈中就是计算结果。
+### 后缀表达式求值
+
+将前面两个方法结合起来,中缀转后缀的过程中,每有一个 `op` 从 `temp` 栈中弹出时,都从 `result` 栈中弹出两个操作数 `a` 和 `b`,计算 `b op a` 的结果再入栈 `result`,最终遍历结束时 `result` 栈中就是计算结果。
 
 ## 递归
 
@@ -489,7 +528,8 @@ temp:
 树层序遍历是指按照从根节点到叶子节点的层次关系,一层一层的横向遍历各个节点。根据 BFS 的定义可以知道,BFS 所得到的遍历顺序就是一种层序遍历。但层序遍历要求将不同的层次区分开来,所以其结果通常以二维数组的形式表示。
 
 例如,下图的树的层序遍历的结果是 `[[1], [2, 3, 4], [5, 6]]`(每一层从左向右)。
-![20240415140255](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240415140255.png)
+
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240415140255.png" width = 80%/></div>
 
 ```c++
 vector<vector<int>> levelOrder(Node *root)
@@ -520,17 +560,23 @@ vector<vector<int>> levelOrder(Node *root)
 }
 ```
 
-# 数组与矩阵
+# <font color="red">矩阵存储</font>
 
 本质是为了节省空间,使得将二维转化为一维空间
+
+- 行优先与列优先：
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240811162138.png" width = 80%/></div>
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240811162155.png" width = 80%/></div>
 
 ## 对称矩阵
 
 - **特征:$a_{i,j}=a_{j,i}$**
-- 将$n^2 \Rightarrow \dfrac{n(n+1)}{2}$个
+- 将 <font color="red">$n^2$个元素压缩为$\dfrac{n(n+1)}{2}$个</font>
 
 若对一个$n$阶矩阵$A$中的任意一个元素$a$,都有$a=q$($1≤i,j≤m$),则称其为对称矩阵。
-![20240415144257](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240415144257.png)
+
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240415144257.png" width = 80%/></div>
+
 对于$n$阶对称矩阵,上三角区的所有元素和下三角区的对应元素相同,若仍采用二维数组存放,则会浪费几乎一半的空间,为此将$n$阶对称矩阵$A$存放在一维数组 $B[n (n+1)/2]$中,即元素$a_{i,j}$,存放在$b_k$中。比如只存放下三角部分(含主对角)的元素。
 元素 $a_{ij}$ 在数组 $B$ 中的下标 $k=1+2+\cdots+(i-1)+j-1=i(i-1)/2+j-1$(数组下标从 0 开始)对称关系如下:
 如果下标从 1 开始,并且按照行优先的存储方式,那么应该存储为如下形式:
@@ -557,9 +603,11 @@ $$
 k=\begin{cases}\dfrac{j(j-1)}{2}+i,\quad i\geqslant j (\text{下三角区和主对角线元素})\\[2ex]\dfrac{i(i-1)}{2}+j,\quad i<j (\text{上三角区元素}a_{i,j}=a_{j,i})\end{cases}
 $$
 
-需要注意的是矩阵和一维数组的下标是从 0 开始还是从 1 开始
+**需要注意的是矩阵和一维数组的下标是从 0 开始还是从 1 开始**
 
 ## 三角矩阵
+
+- 将 <font color="red">$n^2$个元素压缩为$\dfrac{n(n+1)}{2}+1$个</font>
 
 上三角区的所有元素均为同一常量。其存储思想与对称矩阵类似,不同之处在于存储完下三角区和主对角线上的元素之后,紧接着存储对角线上方的常量一次,所以可以将$n$阶下三角矩阵$A$ 压缩存储在 $B[n(n+1)/2+1]$中
 
@@ -619,6 +667,8 @@ $$
 
 三对角矩阵$A$也可以采用压缩存储,将 3 条对角线上的元素**按行优先方式**存放在一维数组 B 中,且$a_{1,1}$存放于$B[0]$中
 ![20240415145913](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240415145913.png)
+
+<!-- 上面的所有的公式都不建议背下来，应该考试时候手推或者代数试 -->
 
 ## 稀疏矩阵
 
