--- a/408数据结构/Note/树.md
+++ b/408数据结构/Note/树.md
@@ -1,3 +1,14 @@
+以下章节的主要逻辑顺序如下所示：
+
+```mermaid
+	graph LR
+	A(树)--> B(树的基本概念)
+    B --> Q(树的基本性质)
+	A(树)--> C(二叉树的基本概念，太重要了所以单独分类)
+	A(树)--> D(森林的基本概念)
+	A(树)--> E(树的的应用)
+```
+
 # 树的基本概念
 
 ## 树的定义
@@ -11,7 +22,7 @@
 
 ## 树的基本术语
 
-### 树中结点关系
+### 树中结点关系的基本术语
 
 - 父亲(parent node):对于除根以外的每个结点,定义为从该结点到根路径上的第二个结点.根结点没有父结点.
 - 祖先(ancestor):一个结点到根结点的路径上,除了它本身外的结点.  
@@ -28,14 +39,14 @@
 - 子树:删掉与父亲相连的边后,该结点所在的子图.如上图中,与 C 结点颜色一样的点,是 C 结点的子图.
 - **结点的度和树的度:一个结点含有的孩子的个数称为该结点的度,树中结点的最大度数称为树的度**.该树中 A 结点的度是 3,B 结点的度是 2,该树的度是 3.
 - 分支结点:度大于 0 的结点称为分支结点(又称非终端结点);在分支结点中,每个结点的分支数就是该结点的度.上图中,ABCDGL 为分支结点.
-- 叶子结点:没有子结点的结点,如图中,EFGKHIMN 结点
+- **叶子结点（叶子节点）**:没有子结点的结点,如图中,EFGKHIMN 结点
 - 结点的深度和层次:结点的层次从树根开始定义,根结点为第 1 层,它的孩子为第 2 层,以此类推.结点的深度就是结点所在的层次
 - 树的高度(或深度):树中结点的最大层数
 - 结点的高度:以该结点为根的子树的高度
 - 有序树和无序树:树中结点的各子树从左到右是有次序的,不能互换,称该树为有序树,否则称为无序树.
 - 路径和路径长度:树中两个结点之间的路径是由这两个结点之间所经过的结点序列构成的,而路径长度是路径上所经过的边的个数.
 
-## 树的性质
+## <font color="red">树的性质</font>
 
 1. 树中的结点数等于所有结点的度数加 1
    总结点数 $n_0+n_1+n_2+\ldots+n_m$
@@ -47,11 +58,11 @@
 
 上述公式的推导:
 
-1. 所有结点的出度记录了他们的结点数.那么加上根结点就相当与整个树的结点数
-2. 已知树的度为 $m$ ,那么第二层最多有 $m$ 个结点,第三层最多有$m^2$个结点,第四层最多有 $m^3$ 个结点,那么可以观察出,第 $i$ 层最多有$m^{i-1}$个结点
-3. 由第二个性质可知,$m$ 叉树每一层如果是 $m^{i-1}$ 个结点的话,总计整个树最多有 $\dfrac{(m^h-1)}{(m-1)}$ 个结点
-4. 为使树的高度最小,在前 $h-1$ 层中,每层的结点数都要达到最大,前 $h-1$ 层最多有 $\dfrac{(m^{h-1}-1)}{(m-1)}$ 个结点,前$h$层最多有 $\dfrac{(m^h-1)}{(m-1)}$ 个结点.因此 $\dfrac{(m^{h-1}-1)}{(m-1)} <n \leq \dfrac{(m^h-1)}{(m-1)}$,即 $h-1<\log_m(n(m-1)+1)\leqslant h$ ,解得 $h_{\min}=\left\lceil\log_m(n(m-1)+1)\right\rceil$
-5. 由于树的度为 $m$, 因此至少有一个结点有 $m$ 个孩,它们处于同一层.为使树的高度最大,其他层可仅有一个结点,因此最大高度(层数)为 $n-m+1$.由此,也可逆推出高度为 $h$、度为 $m$ 的树至少有 $h+m-1$ 个结点
+1. 所有结点的出度记录了他们的结点数.那么加上根结点就相当与整个树的结点数。
+2. 其实就是第 $i$ 层放满，然后根据等比数列公式 $a_n=a_1 \cdot q^{n-1} $，求得第 $i$ 层最多有 $m^{i-1}$ 个结点。
+3. 整棵树每一层都放满，然后每一层其实就是一个等比数列，然后对等比数列进行求和，求得整个二叉树有 $\dfrac{(m^h-1)}{(m-1)}$ 个结点。
+4. 为使树的高度最小,在前 $h-1$ 层中,每层的结点数都要达到最大,前 $h-1$ 层最多有 $\dfrac{(m^{h-1}-1)}{(m-1)}$ 个结点,前$h$层最多有 $\dfrac{(m^h-1)}{(m-1)}$ 个结点.因此 <font color="red">$\dfrac{(m^{h-1}-1)}{(m-1)} <n \leq \dfrac{(m^h-1)}{(m-1)}$</font>,即 $h-1<\log_m(n(m-1)+1)\leqslant h$ ,解得 $h_{\min}=\left\lceil\log_m(n(m-1)+1)\right\rceil$
+5. 由于树的度为 $m$, 因此至少有一个结点有 $m$ 个孩子。为使树的高度最大,其他层可仅有一个结点,因此最大高度(层数)为 $n-m+1$.由此,也可逆推出高度为 $h$、度为 $m$ 的树至少有 $h+m-1$ 个结点
 
 ## 树的存储结构
 
@@ -72,7 +83,8 @@ typedef struct{//树的类型定义
 }PTree;
 ```
 
-双亲表示法可以很快的得到每个结点的双亲结点,但求结点的孩子时则需要遍历整个结构.因此其适合找父亲多,找孩子少的树.
+双亲表示法可以很快的得到每个结点的双亲结点,但求结点的孩子时则需要遍历整个结构.因此其适合找父亲多,找孩子少的树。
+该存储结构本质上是一个三维的矩阵，第一列代表了该节点的下标，第二列代表了节点的数据，第三列代表了节点的该节点的父节点的下标。
 
 ### 孩子表示法(顺序+链式存储)
 
@@ -144,25 +156,28 @@ typedef struct CSNode
 
 # 二叉树的概念
 
+<!-- 二叉树是一种特殊的树结构，按理说应该放到树章节中，但是由于它太重要了，因此单列出来 -->
+
 ## 二叉树的定义
 
 二叉树是一种特殊的树形结构,其特点是**每个结点至多只有两棵子树(即二叉树中不存在度大于 2 的结点)**,并且二叉树的**子树有左右之分**,其**次序不能任意颠倒**.
 与树相似,二叉树也以递归的形式定义.二叉树是$n(n≥0)$个结点的有限集合:
 
-- 或者为空二叉树,即 $n=0$.
-- 或者由一个根结点和两个互不相交的被称为根的左子树和右子树组成.左子树和右子树又分别是一棵二叉树.
+- 或者为空二叉树,即 $n=0$。
+- 或者由一个根结点和两个互不相交的被称为根的左子树和右子树组成。左子树和右子树又分别是一棵二叉树。
   ![20240417150027](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240417150027.png)
 
-## m 叉树与度为 m 的树和度为 m 的有序树的区别
+- <font color="#00008B">m 叉树与度为 m 的树和度为 m 的有序树的区别？</font>
+  - 高度为$h$的$m$叉树和高度为$h$度为$m$的树的区别:
+    - 度为 m 的树中,必须至少有一个结点有 m 个孩子结点.
+    - m 叉树中可以没有一个结点的孩子数等于 m,甚至可以是一棵空树.
+  - m 叉树和度为 m 的有序树的区别:
+    - 度为 m 的树至少有 m+1 个结点,m 叉树可以为空
+    - 度为 m 的有序树的孩子结点的左右次序是相对而言的,若某个结点只有一个孩子,则这个孩子就不存在左右这个概念.m 叉树无论有没有 m 个孩子,均需要区分左右孩子结点
 
-- 高度为$h$的$m$叉树和高度为$h$度为$m$的树的区别:
-  - 度为 m 的树中,必须至少有一个结点有 m 个孩子结点.
-  - m 叉树中可以没有一个结点的孩子数等于 m,甚至可以是一棵空树.
-- m 叉树和度为 m 的有序树的区别:
-  - 度为 m 的树至少有 m+1 个结点,m 叉树可以为空
-  - 度为 m 的有序树的孩子结点的左右次序是相对而言的,若某个结点只有一个孩子,则这个孩子就不存在左右这个概念.m 叉树无论有没有 m 个孩子,均需要区分左右孩子结点
+## <font color="red">二叉树的性质</font>
 
-## 二叉树的性质
+二叉树的性质可以等同于树的性质进行理解。
 
 1. 树中的结点数等于所有结点的度数加 1.
    总结点数$=n_0+n_1+n_2$
@@ -176,8 +191,8 @@ typedef struct CSNode
 上述公式的推导:
 
 1. 所有结点的出度记录了他们的结点数.那么加上根结点就相当与整个树的结点数.
-2. 已知树的为非空二叉树,那么第二层最多有 2 个结点,第三层最多有$2^2$个结点,第四层最多有 $2^3$ 个结点,那么可以观察出,第 $k$ 层最多有$2^{k-1}$个结点
-3. 由第二个性质可知,二叉树每一层如果是 $2^{i-1}$ 个结点的话,总计整个树最多有 $\dfrac{(2^h-1)}{(2-1)}=2^h-1$ 个结点
+2. 原理同树，第 $k$ 层最多有$2^{k-1}$个结点
+3. 原理同树,二叉树每一层如果是 $2^{i-1}$ 个结点的话,总计整个树最多有 $\dfrac{(2^h-1)}{(2-1)}=2^h-1$ 个结点
 4. 为使树的高度最小,在前 $h-1$ 层中,每层的结点数都要达到最大,前 $h-1$ 层最多有 $\dfrac{(2^{h-1}-1)}{(2-1)}$ 个结点,前$h$层最多有 $\dfrac{(2^h-1)}{(2-1)}$ 个结点.因此 $\dfrac{(2^{h-1}-1)}{(2-1)} <n \leq \dfrac{(2^h-1)}{(2-1)}$,即 $h-1<\log_2(n+1)\leqslant h$ ,解得 $h_{\min}=\left\lceil\log_2(n+1)\right\rceil$
 5. 由第一条可推导出
 
@@ -185,9 +200,11 @@ typedef struct CSNode
 
 ### 满二叉树
 
-![20240417154108](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240417154108.png)
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240417154108.png" width = 80%/></div>
+
 所有叶结点的深度均相同,且所有非叶节点的子节点数量均为 2 的二叉树称为完美二叉树.
-**满二叉树的性质**:
+
+<font color="red">满二叉树的性质:</font>
 
 1. 高为$h$的满二叉树上一共有$2^h-1$个结点
 2. 高为$h$的满二叉树上,每层都有$2^{h-1}$个结点
@@ -197,17 +214,20 @@ typedef struct CSNode
 
 ### 完全二叉树
 
-![20240417154136](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240417154136.png)
-**只有最下面两层结点的度数可以小于 2**,且最下面一层的结点都集中在该层最左边的连续位置上
-**完全二叉树的性质**:
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240417154136.png" width = 70%/></div>
 
-1. **高为 $h$,有 $n$ 个结点的完全二叉树上,编号与满二叉树的一一对应**
+**只有最下面两层结点的度数可以小于 2**,且最下面一层的结点都集中在该层最左边的连续位置上。
+<font color="red">完全二叉树的性质</font>:
+
+1. 高为 $h$,有 $n$ 个结点的完全二叉树上,编号与满二叉树的一一对应
 2. 高为 $h$,有 $n$ 个结点的完全二叉树上,若结点编号$i>floor(n/2)$,则该结点一定是叶子结点,否则是非叶子结点
 3. 高为 $h$,有 $n$ 个结点的完全二叉树上,**叶子结点只会处于最后一层和倒数第二层**
 4. 高为 $h$,有 $n$ 个结点的完全二叉树上,**只可能存在一个结点度为 1 并且它肯定只有左孩子没有右孩子**
 5. 高为 $h$,有 $n$ 个结点的完全二叉树上,若 n 为奇数则所有结点度都为 2,若为偶数,则有一个结点度为 1.(叶子结点除外)
 6. 具有 $n$ 个 $(n>0)$ 结点的完全二叉树的高度为 $ceil(\log_2(n+1))$或$floor(\log_2n)+1$.
-<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240417160429.png" width = 30%/></div>
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240417160429.png" width = 20%/></div>
+
+7. $n_1=0$ 或者 $n_1=1$ 可由 $n$的奇偶性确定,$\begin{cases} n_1 \text{为奇数},n_1=0 \\ n_1 \text{为偶数},n_1=1 \end{cases}$。**因此，当$n$确定时，$n_0,n_1,n_2$都是确定的，那么其树型也可以确定。**
 
 <a id="section1"></a>
 
@@ -365,10 +385,10 @@ vector<vector<int>> levelOrder(Node *root)
 
 ### 线索二叉树
 
-- 定义:一个二叉树通过如下的方法"穿起来":所有原本为空的右子节点指针改为指向该节点在中序序列中的后继,所有原本为空的左子节点指针改为指向该节点的中序序列的前驱.
-- 作用:线索二叉树能线性地遍历二叉树,从而比递归的中序遍历更快.使用线索二叉树也能够方便的找到一个节点的父节点.
-- 线索二叉树是物理结构
-- $n$个结点的线索二叉树上有$n+1$个线索
+- 定义:以中序遍历为例：一个二叉树通过如下的方法"穿起来":所有原本**为空的右子节点**指针改为指向该节点在**中序序列中的后继**,所有原本**为空的左子节点**指针改为指向该节点的**中序序列的前驱**。
+- 作用:线索二叉树能线性地遍历二叉树,从而比递归的中序遍历更快.使用线索二叉树也能够方便的找到一个节点的父节点。
+- 线索二叉树是物理结构。
+- $n$个结点的线索二叉树上有$n+1$个线索。
 - 线索二叉树的存储结构:
 <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240418151020.png" width = 50%/></div>
 其中标志域的含义如下:
@@ -377,7 +397,7 @@ $$
 \begin{aligned}&\text{ltag}=\begin{cases}0,&\text{lchild域指示结点的左孩子}\\1,&\text{lchild域指示结点的前驱}\end{cases}\\&\text{rtag}=\begin{cases}0,&\text{rchild域指示结点的右孩子}\\1,&\text{rchild域指示结点的后继}\end{cases}\end{aligned}
 $$
 
-线索为 1 时,指针域是前驱或后继结点,为 0 时,指针域是孩子结点.
+线索为 $1$ 时,指针域是前驱或后继结点,为 $0$ 时,指针域是孩子结点.
 代码表示:
 
 ```c++{.line-numbers}
@@ -660,7 +680,7 @@ void postOrder(ThreadNode *r)
 
 ### 树转换为二叉树
 
-原理:二叉树的左孩子是该结点的子结点,右孩子是该结点的兄弟
+<font color="red">原理:二叉树的左孩子是该结点的子结点,右孩子是该结点的兄弟</font>
 
 <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240421151030.png" width = 60%/></div>
 <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240421151102.png" width = 70%/></div>
@@ -685,6 +705,8 @@ void postOrder(ThreadNode *r)
   1. 中序遍历森林中第一棵树的根结点的子树森林
   2. 访问第一棵树的根结点
   3. 中序遍历除去第一棵树之后剩余的树构成的森林
+
+## 森林，树，二叉树遍历的总结
 
 |    树    |   森林   |  二叉树  |
 | :------: | :------: | :------: |
@@ -1115,3 +1137,8 @@ d[find(a)] = distance; // 根据具体问题,初始化find(a)的偏移量
 
 - 度为 m 的树,某一层不一定只有 m 个点,如下图该树的度为 3,但是在第三层有 5 个点:
 <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240417141050.png" width = 40%/></div>
+
+- 叶子节点的相对位置不变，根据该性质可以得到解决很多问题。
+    <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240814230341.png" width = 80%/></div>
+    <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240814230352.png" width = 80%/></div>
+    <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240814230401.png" width = 80%/></div>
