--- a/408数据结构/Note/绪论.md
+++ b/408数据结构/Note/绪论.md
@@ -125,7 +125,7 @@
   O(1)<O(\log_2n)<O(n)<O(n\text{log}_2n)<O(n^2)<O(n^3)<O(2^n)<O(n!)<O(n^n)
   $$
 
-#### 时间复杂度的计算
+#### <font color="red">时间复杂度的计算</font>
 
 > 主要有以下题型,主要使用定义法分析,实在不行代数算。其实这个地方的计算主要是看有多少循环,循环对时间复杂度的影响是最大的。
 
@@ -258,7 +258,7 @@ for (int i = 1; i <= n; i++)
 
 ---
 
-#### Master 定理计算递归时间复杂度
+#### <font color="#00008B">Master 定理计算递归时间复杂度</font>
 
 ![20240810161925](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240810161925.png)
 
