图部分修改

--- a/408数据结构/Note/图.md
+++ b/408数据结构/Note/图.md
@@ -6,12 +6,13 @@
 
 ### <font color="red">无向图的定义与相关概念</font>
 
-- 无向图的定义:若 $E$ 是无向边(简称边)的有限集合,则图 $G$ 为无向图.边是顶点的无序对,记为 $(v,w)$ 或 $(w,v)$.可以说 $w$ 和 $v$ 互为邻接点.边$(v,w)$依附于$w$ 和 $v$,或称边 $(v,w)$ 和 $v,w$ 相关联.
+- 无向图的定义:若 $E$ 是无向边(简称边)的有限集合,则图 $G$ 为无向图.边是顶点的无序对,记为 $(v,w)$ 或 $(w,v)$.可以说 $w$ 和 $v$ 互为邻接点.边 $(v,w)$ 依附于$w$ 和 $v$,或称边 $(v,w)$ 和 $v,w$ 相关联.
 - <font color="red">连通,连通图,连通分量</font>
-  - 在无向图中,若从顶点$v$到顶点$w$有路径存在,则称$v$和$w$是连通的.
-  - 若图$G$中任意两个顶点都是连通的,则称图$G$为连通图,否则称为非连通图.
-  - 极小连通子图(生成树):要求既要保持连通又要使得边数最少.
-  - 无向图中的极大连通子图(要求其连通子图包含其所有边)称为连通分量.
+  - 在无向图中,若从顶点$v$到顶点$w$有路径存在,则称$v$和$w$是**连通**的.
+  - 若图$G$中**任意两个顶点都是连通的**,则称图 $G$**为连通图**,否则称为非连通图.
+  - **极小连通子图(生成树):要求既要保持连通又要使得边数最少.**
+  - 无向图 $G$ 中的**极大连通子图称为 $G$ 的连通分量**。显然，任何连通图的连通分量只有一个，即本身，而 <font color="#00008B">非连通图有多个连通分量</font>。
+  <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240815191958.png" width =80%/></div>
 - 生成树,生成森林:
 
   - 生成树:连通图的生成树是包含图中全部顶点的一个极小连通子图.若图中的顶点数为 $n$,则它的生成树有 $n-1$ 条边,生成树不一定唯一.
@@ -19,35 +20,37 @@
   - 生成森林:非连通图中,连通分量的生成树构成了非连通图的生成森林
 
 - 顶点的度:图中以该顶点为一个端点的边的数目
-  - 无向图中顶点$v$的度是指依附于该顶点的边的条数,记为 $TD(v)$.具有 $n$ 个顶点, $e$ 条边的无向图中,所有顶点的度总和是边数的二倍,即 $\sum_{i=1}^nTD(v_i)=2e$
+  - 无向图中顶点$v$的度是指依附于该顶点的边的条数,记为 $TD(v)$.具有 $n$ 个顶点, $e$ 条边的无向图中,所有顶点的度总和是边数的二倍,即 $\sum_{i=1}^nTD(v_i)=2e$。
 
-> 概念辨析:极大连通子图,极小连通子图,连通分量,生成树,生成森林
+> <font color="red">概念辨析:极大连通子图,极小连通子图,连通分量,生成树,生成森林</font>
 >
 > <div align=center><img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240504125057.png" width = 40%/></div>
-> 如图:c是一个非连通图,其由a和b两个连通图组成,对于c来说,a和b是它的两个连通分量,a和b分别是两棵生成树,共同组成了生成森林.
+> 如图:c是一个非连通图,其由a和b两个连通图组成,对于c来说,a和b是它的两个连通分量,a和b分别是两棵生成树,共同组成了生成森林。
 
 ### <font color="red">有向图的定义与相关概念</font>
 
-- 有向图的定义:若 $E$ 是有向边(也称弧)的有限集合,则图 $G$ 为有向图.弧是顶点的有序对,记为 $<v,w>$.其中 $v,w$ 是顶点,$v$称为弧尾,$w$称为弧头, $<v,w>$ 称为从 $v$到 $w$ 的弧,也称 $v$邻接到 $w$.
+- 有向图的定义:若 $E$ 是有向边(也称弧)的有限集合,则图 $G$ 为有向图.弧是顶点的有序对,记为 $<v,w>$.其中 $v,w$ 是顶点,$v$称为弧尾,$w$称为弧头, $<v,w>$ 称为从 $v$到 $w$ 的弧,也称 $v$邻接到$w$。
 - <font color="red">强连通,强连通图,强连通分量</font>:
 
-  - 强连通:有向图中,看从顶点 $v$ 到顺点 $w$ 和顶点 $w$ 到顶点 $V$ 之间都有路径,则称 $v$ 和 $w$ 是强连通的
-  - 强连通图:有向图 $G$ 中任意两个顶点都是强连通的
-  - 强连通分量:有向图中的极大强连通子图
-  <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240503231457.png" width = 80%/></div>
+  - 强连通:有向图中,**从顶点 $v$ 到顶点 $w$ 和顶点 $w$ 到顶点 $v$ 之间都有路径**,则称 $v$ 和 $w$ 是强连通的
+  - 强连通图:**有向图 $G$ 中任意两个顶点都是强连通的**
+  <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240815192208.png" width = 80%/></div>
+
+  - 强连通分量:**在任意有向图中能够实现强连通的部分我们称其为强连通分量**。有向图中的极大强连通子图是它本身。
+  <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240815192445.png" width = 50%/></div>
 
 - 度
-  - 有向图中顶点$v$的度分为入度和出度.
-  - 入度:入度是以顶点 $v$ 为终点的有向边的条数记为 $ID(v)$
-  - 出度:出度是以顶点 $v$为起点的有向边的数目,记为 $OD(v)$.
+  - 有向图中顶点$v$的度分为入度和出度。
+  - 入度:入度是以顶点 $v$ 为终点的有向边的条数记为 $ID(v)$。
+  - 出度:出度是以顶点 $v$ 为起点的有向边的数目记为 $OD(v)$。
   - 具有 $n$个顶点, $e$条边的有向图中,全部顶点的入度之和与出度之和相等,等于边数.即 $\sum_{i=1}^n ID(v_i)=\sum_{i=1}^n OD(v_i)=e$
 
 ### <font color="red">完全图的定义与相关概念</font>
 
-- 无向完全图:设 $G$ 为一个有 $n$ 个节点的无向简单图,若 $G$ 中每个顶点都与其余 $n-1$ 个顶点有边相连(**任意两个顶点都有边相连**),则称 $G$ 为 n 阶无向完全图,简称为 $n$ 阶完全图,记做$K_n$,边与点的关系是$\dfrac{n*(n-1)}{2}$
+- 无向完全图:设 $G$ 为一个有 $n$ 个节点的无向简单图,若 $G$ 中每个顶点都与其余 $n-1$ 个顶点有边相连(**任意两个顶点都有边相连**),则称 $G$ 为 n 阶无向完全图,简称为 $n$ 阶完全图,记做$K_n$,边与点的关系是$\dfrac{n*(n-1)}{2}$。
 <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240503221330.png" width = 20%/></div>
 
-- 有向完全图:设 $G$ 为一个有 $n$ 个节点的有向简单图,若 $G$ 中每个顶点都有连到其余 $n-1$ 个顶点的边,且都有这些节点连向它的边(**图中任意两个顶点都有两条方向相反的边相连**),则称 $G$ 为 $n$ 阶有向完全图
+- 有向完全图:设 $G$ 为一个有 $n$ 个节点的有向简单图,若 $G$ 中每个顶点都有连到其余 $n-1$ 个顶点的边,且都有这些节点连向它的边(**图中任意两个顶点都有两条方向相反的边相连**),则称 $G$ 为 $n$ 阶有向完全图。
 <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240503221358.png" width = 20%/></div>
 
 ### 其他的特殊图
@@ -55,7 +58,7 @@
 - 简单图,多重图
   - 简单图(simple graph):若一个图中没有顶点到自身的环和重复的边,它被称为简单图
   - 多重图:如果一张图中有自环或重边,则称它为多重图(multigraph)
-  <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240503224023.png" width = 40%/></div>
+  <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240503224023.png" width = 30%/></div>
 - 稠密图,稀疏图:
   - 稠密图:若一张图的边数远小于其点数的平方,那么它是一张稀疏图 (sparse graph)
   - 若一张图的边数接近其点数的平方,那么它是一张稠密图 (dense graph)
@@ -64,9 +67,9 @@
 ### 图中的其他术语
 
 - 路径和路径长度,简单路径:
-  - **路径**:在图中,顶点 $\mathrm{V_p}$ 到顶点 $\mathrm{V_q}$ 之间的顶点序列 $\mathrm{V_p},\mathrm{V_a},\mathrm{V_b}...\mathrm{V_q}$
-  - 路径长度:路径上边的数目,若该路径最短则称之为距离
-  - 简单路径:序列中顶点不重复出现的路径,而且自身不存在环
+  - <font color="#00008B">路径:在图中,顶点 $\mathrm{V_p}$ 到顶点 $\mathrm{V_q}$ 之间的**顶点序列** $\mathrm{V_p},\mathrm{V_a},\mathrm{V_b}...\mathrm{V_q}$</font>。
+  - <font color="#00008B">路径长度:路径上边的数目,若该路径最短则称之为距离。</font>
+  - 简单路径:若一条路径上除开始点和结束点可以相同外，其余顶点均不相同，则称此路径为简单路径。
 - 边的权,网络(带权图):
   - 权:图中边具有与之相关的数值,称之为权重,权重可以表示从一个顶点到另一个顶点的距离、花费的代价等
   - 这种带权图也叫做网络
@@ -90,6 +93,13 @@
   - 若是连通无向图，其边的个数至少为 $n-1$ (边最少即构成一棵树的情形)
   - 若是强连通有向图，其边的个数至少是 $n$ (边最少即构成一个有向环的情形)
 
+## 图的比较
+
+| 边的有向与无向/图的特性 |     度的描述     |                                                  连通的描述                                                   |                      完全图                      |                     生成树/生成森林                      |    完全图中点与边的关系    | 连通图中$min_{\text{边}}$ |
+| :---------------------: | :--------------: | :-----------------------------------------------------------------------------------------------------------: | :----------------------------------------------: | :------------------------------------------------------: | :------------------------: | :-----------------------: |
+|         有向图          |  分为入度与出度  | 两点间都有相互的路径叫**强连通**。图中$\forall$两点都是强连通图的叫**强连通图**。极大连通子图称为强连通分量。 | 有向完全图：任意两个顶点都有两条方向相反的边相连 |                    无生成树或生成森林                    |          $n(n-1)$          |            $n$            |
+|         无向图          | 无入度与出度之分 |               两点有路径叫**连通**，图中$\forall$两点有路径叫连通图。极大连通子图称为连通分量。               |        无向完全图：任意两个顶点都有边相连        | 极小连通子图叫做生成树。非连通图中的连通分量叫生成森林。 | $\dfrac{\mathrm{n(n-1)}}2$ |           $n-1$           |
+
 # 图的存储和操作
 
 ## <font color="red">图的存储</font>
@@ -102,6 +112,8 @@
 $$
   A[i][j]=\begin{cases}1,&(v_i,v_j)\text{或}\langle v_i,v_j\rangle\text{是}E(G)\text{中的边}\\0或\infty,&(v_i,v_j)\text{或}\langle v_i,v_j\rangle\text{不是}E(G)\text{中的边}\end{cases}
 $$
+
+<font color="#00008B">从该式可以得知，在邻接矩阵中，入度的是列，出度的是行。</font>
 
 <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240504131630.png" width = 80%/></div>
 
@@ -119,11 +131,11 @@ typedef struct
 
 ### 邻接表
 
-**图的邻接表存储方式是指对具有 $n$ 个顶点的图,建立 $n$ 条对应的单链表**,这些单链表称为**边表**.每个单链表的第一个结点称为头结点,存放顶点相关的信息.每个单链表中除了头结点外的其他结点,称为边结点,存放以头结点为起点的边的信息.
-将 $n$ 个单链表的头结点存放在一个一维数组中,这个一维数组称为**顶点表**.单链表的头结点, 也称为顶点表结点.
+**图的邻接表存储方式是指对具有 $n$ 个顶点的图,建立 $n$ 条对应的单链表**,这些单链表称为**边表**.每个单链表的第一个结点称为头结点,存放顶点相关的信息.每个单链表中除了头结点外的其他结点,称为边结点,存放以头结点为起点的边的信息。
+将 $n$ 个单链表的头结点存放在一个一维数组中,这个一维数组称为**顶点表**.单链表的头结点, 也称为顶点表结点。
 
 ![20240504143850](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240504143850.png)
-顶点表结点由两个域组成:顶点域(data)存储顶点 $v_i$ 的相关信息,边表头指针域 (firstarc)指向第一条边的边表结点.边表结点至少由两个域组成:邻接点域(adivex)在储与头结点顶点,邻接的顶点编号,指针域 (nextarc)指向下一条边的边表结点.
+顶点表结点由两个域组成:顶点域(data)存储顶点 $v_i$ 的相关信息,边表头指针域 (firstarc)指向第一条边的边表结点.边表结点至少由两个域组成:邻接点域(adivex)在储与头结点顶点,邻接的顶点编号,指针域 (nextarc)指向下一条边的边表结点。
 ![20240504144339](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240504144339.png)
 
 ```c++{.line-numbers}
@@ -148,7 +160,7 @@ typedef struct
 
 ### 十字链表法
 
-十字链表是**有向图**的一种链式存储结构.在十字链表中,有向图的每条弧用一个结点(弧结点)来表示,每个顶点也用一个结点(顶点结点)来表示.
+十字链表是**有向图**的一种链式存储结构。在十字链表中,有向图的每条弧用一个结点(弧结点)来表示,每个顶点也用一个结点(顶点结点)来表示.
 ![20240504151721](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240504151721.png)
 弧结点中有 5 个域:tailvex 和 headvex 两个域分别指示弧尾和弧头这两个顶点的编号:头链域 hlink 指向弧头相同的下一个弧结点:尾链域 tlink 指向弧尾相同的下一个弧结点:info 域存放该弧的相关信息.
 
@@ -156,7 +168,7 @@ typedef struct
 ![20240504160413](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240504160413.png)
 
 - 其中红框内的内容表示邻接表,以最上行为例,$V_1 \to V_2,V_1 \to V_3$,在十字链表中的表示为 $0 \to 1 ,0 \to 2$
-- 处红色外其他颜色表示该结点的逆邻接表,以$V_1$结点为例,有$V_4,V_3$两点入$V_1$点,因此指向$V_3,V_4$
+- 处红色外其他颜色表示该结点的逆邻接表,以 $V_1$ 结点为例,有 $V_4,V_3$ 两点入 $V_1$ 点,因此指向 $V_3,V_4$。
 
 ### 邻接多重表
 
@@ -269,7 +281,7 @@ void dfs(int s)
 }
 ```
 
-### 深度优先生成树和生成森林
+### 深度优先生成树和深度优先生成森林
 
 连通图调用 $DFS$ 才能产生深度优先生成树,否则就是生成深度优先生成森林.此外,基于邻接表存储的深度优先生成树是不唯一的.
 ![20240516152953](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240516152953.png)
@@ -341,11 +353,11 @@ void BFS(int s)
 
 在广度遍历的过程中,我们可以得到一棵遍历树,称为广度优先生成树.需要注意的是,同一个图的邻接矩阵存储表示是唯一的,所以其广度优先生成树也是唯一的,但因为邻接表存储表示不唯一,所以其广度优先生成树也是不唯一的.
 
-![20240516152038](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240516152038.png)
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240516152038.png" width = 80%/></div>
 
 ## 遍历与连通性
 
-图的遍历算法可以用来判断图的连通性。对于无向图来说,若无向图是连通的,则从任意一个结点出发,仅需一次遍历就能够访问图中的所有顶点;若无向图是非连通的,则从某一个顶点出发,一次遍历只能访问到该顶点所在连通分量的所有顶点,而对于图中其他连通分量的顶点,则无法通过这次遍历访问。对于有向图来说,若从初始顶点到图中的每个顶点都有路径,则能够访问到图中的所有顶点,否则不能访问到所有顶点。
+图的遍历算法可以用来判断图的连通性。<font color="#00008B">对于无向图来说,若无向图是连通的,则从任意一个结点出发,仅需一次遍历就能够访问图中的所有顶点;若无向图是非连通的,则从某一个顶点出发,一次遍历只能访问到该顶点所在连通分量的所有顶点,而对于图中其他连通分量的顶点,则无法通过这次遍历访问。对于有向图来说,若从初始顶点到图中的每个顶点都有路径,则能够访问到图中的所有顶点,否则不能访问到所有顶点。</font>
 
 # 图的应用
 
@@ -360,15 +372,16 @@ void BFS(int s)
 
 ### $Prim$ 算法
 
-#### 算法解释
+#### <font color="red">算法解释</font>
 
-![20240518151809](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240518151809.png)
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240518151809.png" width = 80%/></div>
 
-- 定义$dist(u)$表示连接 $C$(注意 $C$ 是点集,换言之是一个图) 中任意点和$u$的边的边权的最小值,我们把$dist(u)$简称为$u$到$C$的距离.以下是具体流程:
-- 将任意点 $x$ 加入$C$,此时 $C$ 中只有一个点 $x$;对于其他点 $y$,如果 $×,y$ 之间有边,则 $dist(y)$等于这些边的边权的最小值,否则 $dist(y)$等于无穷大
-- 在每一轮中,将 $dist$ 最小(不能是无穷大)的还不在 $C$ 中的顶点 $z$ 加入 $C$,同时将连接 $C$ 和 $z$ 的边权最小的边加入最小生成树的边集,并且用 $z$ 连出去的边尝试更新其它点的 $dist$
-- 当没有新的点加入 $C$ 时,算法结束.此时若所有点都加入了 $C$,意味着我们到了最小生成树,否则意味着图不连通.
-- 朴素$Prim$时间复杂度是 $O(n^2+m)$, $n$ 表示点数,$m$ 表示边数
+- 定义 $dist(u)$ 表示连接 $C$ (注意 $C$ 是点集,换言之是一个图) 中任意点和$u$的边的边权的最小值,我们把 $dist(u)$ 简称为$u$到$C$的距离.以下是具体流程:
+  - <font color="red">将任意点 $x$ 加入$C$,此时 $C$ 中只有一个点 $x$;对于其他点 $y$,如果 $x,y$ 之间有边,则 $dist(y)$等于这些边的边权的最小值,否则 $dist(y)$等于无穷大</font>
+  - 在每一轮中,将 $dist$ 最小(不能是无穷大)的还不在 $C$ 中的顶点 $z$ 加入 $C$,同时将连接 $C$ 和 $z$ 的边权最小的边加入最小生成树的边集,并且用 $z$ 连出去的边尝试更新其它点的 $dist$
+  - 当没有新的点加入 $C$ 时,算法结束.此时若所有点都加入了 $C$,意味着我们到了最小生成树,否则意味着图不连通.
+- <font color="red">邻接表存储的$Prim$时间复杂度是 $O(n^2+m)$, $n$ 表示点数,$m$ 表示边数。邻接矩阵的时间复杂度为$O(n^2)$</font>
+- $Prim$ 算法适用于边稠密的图。
 
 #### 代码实现
 
@@ -415,20 +428,23 @@ int Prim()
 
 ### $Kruskal$ 算法
 
-#### 算法解释
+#### <font color="red">算法解释</font>
 
-![20240518152208](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240518152208.png)
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240518152208.png" width = 80%/></div>
 
 - 与 $Prim$ 不同,$Kruskal$ 是以一条条添加边的形式求最小生成树的
 - 为了把一开始 $n$ 个分散的点连成一棵树,$Kruskal$ 算法使用了数据结构中的并查集
-- 时间复杂是$O(mlogn)$,n 表示点数,m 表示边数
 - 算法流程如下:
+
   - 初始化并查集,一开始所有点的代表元都是它自己,每个点本身构成了一个集合;
   - 将所有边按照边权从小到天的顺序排序;
   - 按边权从小到大的顺序依次枚举所有边,如果当前这条边连接的两个顶点位于同一个集合(它们的代表元是一样的),则什么都不做,否则
     - 将这条边添加到最小生成树的边集里
     - 将这条边连接的两个点所在的集合合并,这里会用到并查集的合并操作
   - 直到只剩下一个集合,算法结束
+
+- <font color="red">时间复杂度是$O(mlogn)$,n 表示点数,m 表示边数</font>
+- $Kruskal$ 适用于边稀疏，顶点多的图。
 
 #### 代码实现
 
@@ -481,7 +497,7 @@ int Kruskal()
 
 - 通常用于解决无负权边图的最短路
 - 我们要维护一个顶点集合 $C$,满足对于所有集合 $C$ 中的顶点 $x$,我们都已经找到了起点 $S$ 到 $x$ 的最短路,此时 $dist(x)$记录的就是最终最短路的长度
-- 时间复杂是$O(n^2+m)$, **_n_**表示点数,**_m_**表示边数
+- 时间复杂是$O(n^2+m)$, n 表示点数,m 表示边数
 
 #### 相关概念
 
@@ -493,11 +509,11 @@ int Kruskal()
   - $S$表示起点,$T$表示终点
   - $dist(u)$代表我们当前求出的从$S$到$u$的最短路径的长度,后面简称为$u$的距离
 
-#### 算法流程
+#### <font color="red">算法流程</font>
 
-- 我们要维护一个顶点集合 $C$,满足对于所有集合 $C$ 中的顶点 $X$,我们都已经找到了起点 $S$ 到 $x$ 的最短路,此时 $dist(x)$记录的就是最终最短路的长度
+- 我们要维护一个顶点集合 $C$,满足对于所有集合 $C$ 中的顶点 $X$,我们都已经找到了起点 $S$ 到 $x$ 的最短路,此时 $dist(x)$ 记录的就是最终最短路的长度
   - 将 $C$ 设置为空,将 $S$ 的距离设置为 0,其余顶点的距离设置为无穷大
-  - 在每一轮中,将离起点最近的($dist$ 最小,不能是无限大)的还不在 $C$ 中的顶点加入 $C$,并且用这个点连出去的边通过松弛操作尝试更新其它点的 $dist$
+  - <font color="red">在每一轮中,将离起点最近的($dist$ 最小,不能是无限大)的还不在 $C$ 中的顶点加入 $C$,并且用这个点连出去的边通过松弛操作尝试更新其它点的 $dist$ </font>
   - 当到达目标终点(如果目标终点存在的话)或者没有新的点加入 $C$ 时,算法结束.
 
 #### 代码实现
@@ -556,34 +572,47 @@ for (int k = 1; k <= n; k++)
             f[k][i][j] = min(f[k - 1][i][j], f[k - 1][i][k] + f[k - 1][k][j]);
 ```
 
-- $f[k][i][j]$表示从$i$到$j$,中间可以经过$1 \sim k$**号**顶点的最短路径的长度
+- <font color="red">$f[k][i][j]$表示从$i$到$j$,中间可以经过$1 \sim k$号顶点的最短路径的长度</font>
 - 最终的迭代中,可以知道的是,$f[k][i][j]$的最小值取不取有两种情况,最小值要么经过 $k$ **号**顶点,要么不经过 $k$ **号**顶点,从这两种情况中取得$f[k][i][j]$的最小值
-- $f[n][u][v]$即为从$u$到$v$的最短路径的长度,因为其本意应为从$i$到$j$中间经过$n$个顶点的最短长度,而一共只有$n$个顶点,所以应为从$u$到$v$的最短路径长度,若等于无穷大则表示不存在从$u$到$v$的路径
+- <font color="red">$f[n][u][v]$即为从$u$到$v$的最短路径的长度,因为其本意应为从$i$到$j$中间经过$n$个顶点的最短长度,而一共只有$n$个顶点,所以应为从$u$到$v$的最短路径长度</font>,若等于无穷大则表示不存在从$u$到$v$的路径
+
+因为第一维对结果无影响，我们可以发现数组的第一维是可以省略的，于是可以直接改成 `f[x][y] = min(f[x][y], f[x][k]+f[k][y])`。
+
+```c++{.line-numbers}
+for (k = 1; k <= n; k++)
+  for (x = 1; x <= n; x++)
+    for (y = 1; y <= n; y++)
+      f[x][y] = min(f[x][y], f[x][k] + f[k][y]);
+```
+
+综上时间复杂度是 $O(N^3)$ ,空间复杂度是 $O(N^2)$。
 
 ## 拓扑排序
 
 ![20240518154232](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240518154232.png)
 
-- **有向无环图**:若一个有向图中不存在环,则称为有向无环图,简称 DAG 图
+- **有向无环图**:若一个有向图中不存在环,则称为有向无环图,简称 **DAG 图**
 - 如果用 DAG 图表示一个工程,其顶点表示活动, 用有向边 $<a,b>$ 表示 a 活动必须早于 b 活动进行, 那么我们将它叫做 **AOV 网**(顶点表示活动的网络)
 
 ### 拓扑排序简介
 
-- 时间复杂度 $O(n+m)$, $n$表示点数,$m$表示边数
-- 拓扑排序$(Topological Sorting, TopoSort)$是对有向无环图$(DAG, Directed Acyclic Graph)$的顶点进行的一种线性排序,排序序列中每个顶点都会且仅会出现一次,且对于所有有向边$u \to v$,排完序后 $u$ 都在 $v$ 前面
+- <font color="red">时间复杂度 $O(n+m)$, $n$表示点数,$m$表示边数</font>
+- 拓扑排序 $(Topological Sorting, TopoSort)$ 是对有向无环图 $(DAG, Directed Acyclic Graph)$的顶点进行的一种线性排序,排序序列中每个顶点都会且仅会出现一次,且对于所有有向边 $u \to v$,排完序后 $u$ 都在 $v$ 前面
   - 举例:学完预备课才可以学基础课,学完基础课才可以学提高课,这是一个三点二边的图,如果该图闭环,那么寄了.如果改图顺序不对,那也寄了.因此如果想要有拓扑排序,就必须是有向无环图.
 - 一个有向无环图可能存在多种有向无环图拓扑排序的结果,如下
   ![20240518154724](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240518154724.png)
 
-### 排序流程
+### $Kahn$算法流程
+
+- <font color="red">核心是维持一个入度为 0 的顶点的集合</font>
 
 - 在拓扑排序中,我们用队列 $L$ 记录到目前为止的拓扑序列,用集合 $S$ 记录所有不在 $L$ 中的入度为 0 的顶点
-- 首先遍历整张图上的顶点,如果一个顶点的入度为 0,将它加入 $S$;
+- 首先遍历整张图上的顶点,<font color="red">如果一个顶点的入度为 0,将它加入 $S$。</font>
 - 当 $S$ 不为空时
-  - 在 $S$ 中任取一个顶点 $x$,将 $x$ 加入到队列 $L$ 的队尾,并把 $x$ 从 $S$ 中删去
-  - 遍历从 $x$ 出发的边$x \to y$,把这条边删掉,如果 $y$ 的入度变成了 0 则将其加入到 $S$ 中
-- 循环结束时,如果所有点都加入了 $L$,那么我们就找到了一个合法的拓扑序列,否则可以证明图中存在环；
-- $L,S$ 一般是用同一个队列实现
+  - <font color="red">在 $S$ 中任取一个顶点 $x$,将 $x$ 加入到队列 $L$ 的队尾,并把 $x$ 从 $S$ 中删去</font>
+  - <font color="red">遍历从 $x$ 出发的边 $x \to y$,把这条边删掉,如果 $y$ 的入度变成了 0 则将其加入到 $S$ 中</font>
+- 循环结束时,<font color="red">如果所有点都加入了 $L$,那么我们就找到了一个合法的拓扑序列</font>,否则可以证明图中存在环；
+- $L,S$ **一般是用同一个队列实现**
 
 #### 模板
 
@@ -613,21 +642,32 @@ inline void TopoSort()
 
 ### 关键路径
 
-![20240518161917](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240518161917.png)
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240518161917.png" width = 80%/></div>
 
-- AOE 网:以顶点表示事件,以有向边表示活动,边上的权值表示完成该活动的开销的带权有向图。(用边表示活动的网络)
+- AOE 网:以顶点表示事件,以有向边表示活动,**边上的权值表示完成该活动的开销的带权有向图。**(用边表示活动的网络)
 - AOE 网的两个重要性质:
   - 只有在某顶点表示的事件发生后,从该顶点出发的各有向边所代表的活动才能开始;
   - 只有进入某顶点的所有有向边所代表的活动都完成时,该顶点所代表的事件才能发生
-- 从开始顶点到结束顶点的路径中,路径长度最大的那条路径我们称之为关键路径。关键路径上的活动我们称之为关键活动。
-- 关键路径的意义在于, 当我们按这个路径将关键活动全部完成时, 其他所有活动也可以并行完成。如果边上的权值代表完成这项活动的时间, 那么关键路径的总权值就代表整个工程完成的最短时间。
-- 事件$\mathrm{v}_{\mathrm{k}}$的最早发生时间 ve(k):从源点 1 到顶点$\mathrm{v}_{\mathrm{k}}$的最长路径长度。
-- 事件$\mathbf{v}_k$的最晚发生时间 vl(k):在不推迟整个工程完成的前提下，保证它的后继事件$\mathbf{v}_{j}$在其最晚发生时间可以发生时，该事件必须发生的时间。
-- 活动$\mathrm{a}_{\mathrm{i}}$的最早开始时间 e(i):该活动弧的起点所表示的事件最早发生时间。
-- 活动$\mathrm{a}_\mathrm{i}$的最迟开始时间 I(i):该活动弧的终点所表示的事件的最晚发生时间与该活动所需事件之差。
+- <font color="red">从开始顶点到结束顶点的路径中,路径长度最大的那条路径我们称之为关键路径。关键路径上的活动我们称之为关键活动（关键活动的最早开始时间和最迟开始时间相等）。</font>
+- 关键路径的意义在于, 当我们按这个路径将关键活动全部完成时, 其他所有活动也可以并行完成。<font color="red">如果边上的权值代表完成这项活动的时间, 那么关键路径的总权值就代表整个工程完成的最短时间。</font>
+- 事件 $\mathrm{v}_{\mathrm{k}}$的最早发生时间 ve(k):从源点 1 到顶点$\mathrm{v}_{\mathrm{k}}$的最长路径长度。
+- 事件 $\mathbf{v}_k$的最晚发生时间 vl(k):在不推迟整个工程完成的前提下，保证它的后继事件$\mathbf{v}_{j}$在其最晚发生时间可以发生时，该事件必须发生的时间。
+- 活动 $\mathrm{a}_{\mathrm{i}}$的最早开始时间 e(i):该活动弧的起点所表示的事件最早发生时间。
+- 活动 $\mathrm{a}_\mathrm{i}$的最迟开始时间 I(i):该活动弧的终点所表示的事件的最晚发生时间与该活动所需事件之差。
+- 关键路径是$AOE$网中从源点到汇点的最长路径。
 - 求关键路径的算法步骤如下：
   - 从源点出发，令 $\nu_e($源点)=0, 按拓扑有序求其余顶点的最早发生时间 $\nu_e()$。
   - 从汇点出发，令 $v_t($汇点$)=v_e($汇点), 按逆拓扑有序求其余顶点的最迟发生时间 $\nu_t()$
   - 根据各顶点的 $v_e()$值求所有弧的最早开始时间 $e()$。
   - 根据各顶点的 $v_{l}()$值求所有弧的最迟开始时间 $l()$。
   - 求 AOE 网中所有活动的差额 $d()$,找出所有 $d()=0$ 的活动构成关键路径。
+
+# 易错整理
+
+- 在邻接表删除与某个顶点有关的弧时，不能认为找到该点就可以。找到该点之后释放该点的后续所有弧只是删除了该点的所有出度。需要再把图中的所有边遍历一遍来删除入度。
+<div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240816133323.png" width = 80%/></div>
+
+- 在描述有向图的连通时，不能单向连通，必须是强连通。
+  <div align=center> <img src="https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240816133636.png" width = 80%/></div>
+
+- 错误的认为任何关键活动提前完成都可以使得整个工程提前完成。整个工程的完成可能会受到其他活动的限制。
